--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,17 @@
-server:
-  port: 8191
-spring:
-  profiles:
-    active: native
+#server:
+#  port: 8191
+#spring:
+#  profiles:
+#    active: native
 #  cloud:
 #    config:
 #        enabled: false
+spring:
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/sagithiyan/config_server
+          search-paths:
+            - 'config/*'
 
